--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+	width: 920px;
+	margin: 0 auto;
+}
+
+html, body, #root, .app {
+	height: 100%;
+	width: 100%;
+}
