--- a/src/gallery/gallery-item/GalleryItem.css
+++ b/src/gallery/gallery-item/GalleryItem.css
@@ -1,11 +1,15 @@
 .gallery-item {
-	width: 140px;
-	height: 260px;
+	width: 200px;
+
 	font-size: 14px;
-	margin: 10px;	
+	margin: 10px;
 }
 
 .gallery-item__num-comments {
 	font-size: 12px;
 	padding: 5px 0px;
+}
+
+.gallery-item__title {
+	font-weight: bold;
 }
